# PvX

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PvX_Blueprint_v0.9.md  README.md  docker-compose.yml  mcp-config.json  pvx.config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO.md  ISSUES.md  TASK_BOARD.md
src/pvx/: __init__.py  main.py  pvx.config.example.yaml
src/pvx/api/: app.py
src/pvx/api/routes/: chat.py  models.py  stats.py  stream.py  tasks.py  vram.py
src/pvx/core/: circuit_breaker.py  classifier.py  compressor.py  config.py  events.py  logger.py  model_discovery.py  queue.py  recovery.py  router.py  tasks.py  tokens.py  vram.py
src/pvx/mcp/: proxy.py  registry.py  security.py  server.py
src/pvx/mcp/tools/: discord.py  filesystem.py  github.py  postgres.py
src/pvx/models/: base.py  claude.py  ollama.py
src/pvx/store/: database.py  models.py
tests/integration/: test_event_bus.py
tests/unit/: test_classifier.py  test_queue.py  test_security.py  test_vram.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/components/: Config.jsx  CostTracker.jsx  Dashboard.jsx  DirectChat.jsx  Feed.jsx  ShadowTerminal.jsx  Sidebar.jsx
ui/src/hooks/: useWebSocket.js
