[project]
name = "pvx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DAL10", email = "dlalithaditya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.89.0",
    "claude-agent-sdk>=0.1.56",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "hypothesis>=6.151.11",
    "mcp>=1.27.0",
    "nvidia-ml-py>=13.595.45",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "ruff>=0.15.9",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
pvx = "pvx.main:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
