[project]
name = "pvx"
version = "0.1.0"
description = "Hardware-aware AI orchestration — routes agentic tasks between local Ollama models and Claude based on VRAM availability and task complexity"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "DAL10", email = "dlalithaditya@gmail.com" }
]
keywords = ["llm", "ollama", "claude", "mcp", "orchestration", "vram", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",  # noqa: keep for PyPI UI

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "nvidia-ml-py>=12.535.0",
    "ollama>=0.3.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "sqlmodel>=0.0.21",
    "structlog>=24.1.0",
    "tiktoken>=0.7.0",
    "uvicorn>=0.30.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/DLA10/PvX"
Repository = "https://github.com/DLA10/PvX"
Issues = "https://github.com/DLA10/PvX/issues"

[project.scripts]
pvx     = "pvx.main:main"
pvx-mcp = "pvx.mcp.server:_sync_run"

[build-system]
requires = ["uv_build>=0.5.0,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
